# Zexta-Launcher

./: .gitignore  PLATFORM_SUPPORT.md  README.md  index.html  msmc-5.0.5.tgz  package-lock.json  package.json  tailwind.config.cjs  test-electron.cjs
.github/workflows/: package.yml
electron/: main.ts  preload.ts
public/: login-popup.html
src/: App.tsx  config.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: launcher.rs  lib.rs  main.rs
